<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:background="@drawable/fondo_azul">

    <FrameLayout android:id="@+id/map_frame"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.7" >

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scrollbars="none"
            android:layout_weight="1"
            >

            <TableLayout
                android:id="@+id/tableLayout1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:stretchColumns="1"
                android:paddingTop="10dp"
                >


                <!-- 2 columns -->
                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dip">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nombre"
                        android:padding="5dip"
                        android:textStyle="bold"
                        android:textColor="#FFFFFF"
                        />

                    <TextView
                        android:id="@+id/txtViewNombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="-"
                        android:padding="5dp"
                        android:textColor="#FFFFFF"
                        android:layout_weight="1"
                        android:ellipsize="none"
                        android:maxLines="100"
                        android:scrollHorizontally="false"/>

                </TableRow>



                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dip"
                    android:textStyle="bold">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/descripcion"
                        android:padding="5dip"
                        android:textColor="#FFFFFF"
                        />

                </TableRow>
                <!-- 2 columns -->
                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dip">



                    <TextView
                        android:id="@+id/txtViewDescripcion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_span="2"
                        android:text="-"
                        android:padding="5dip"
                        android:textColor="#FFFFFF"
                        android:layout_weight="1"
                        android:ellipsize="none"
                        android:maxLines="100"
                        android:scrollHorizontally="false"/>

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dip"
                    android:textStyle="bold">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/web"
                        android:padding="5dip"
                        android:textColor="#FFFFFF"
                        />

                    <TextView
                        android:id="@+id/txtViewWeb"
                        android:autoLink="web"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="-"
                        android:padding="5dp"
                        android:textColor="#FFFFFF"
                        android:layout_weight="1"
                        android:ellipsize="none"
                        android:maxLines="100"
                        android:scrollHorizontally="false"/>

                </TableRow>

            </TableLayout>

        </ScrollView>

    </FrameLayout>


</LinearLayout>